# document_extraction

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
app/: __init__.py  main.py
app/components/: __init__.py  document_viewer.py  file_uploader.py  results_display.py
evaluation/: __init__.py  evaluate_performance.py  metrics.py  report_generator.py
evaluation/test_data/: annotations.json
evaluation/test_data/samples/: .gitkeep  contract_001.txt  contract_002.txt  invoice_001.txt  invoice_002.txt  invoice_003.txt
src/document_extraction/: __init__.py  config.py  pipeline.py
src/document_extraction/llm/: __init__.py  extractors.py  mock_client.py  prompts.py  vertex_client.py
src/document_extraction/models/: __init__.py  contract.py  invoice.py
src/document_extraction/ocr/: __init__.py  tesseract_ocr.py
src/document_extraction/preprocessing/: __init__.py  image_enhancer.py  pdf_converter.py
src/pdf_extractor/: __init__.py  client.py  extractor.py
tests/: __init__.py  test_llm.py  test_ocr.py  test_pipeline.py  test_preprocessing.py
