[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Extraction d'informations depuis PDF via Vertex AI VLLM"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.38.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_extractor"]
